@@ -35,6 +35,7 @@
 * Persist HTTP sessions across reboots so Users are not logged out
 * Delete Mango work directory on upgrade as it is only used for the legacy UI
 * Fix bug where the quantize setting on a data source was not being imported in a JSON import
+* Add ability for modules to define asynchronous servlets
 
 *Version 3.7.4*
 * Improve work item failure logging
